Update TIL 2025 post with image styling and revise last modified dates in sitemap

--- a/posts/today-i/2025-12-31-TIL-2025.qmd
+++ b/posts/today-i/2025-12-31-TIL-2025.qmd
@@ -42,7 +42,8 @@ TIL 2025 버전. 수시로 바뀐다.
 2. 감각상각, 유무형 자산 상각비는 회사의 구조에 따라서 천차 만별이다. 따라서 회사간 비교를 위해서는 에비따를 보는 게 좋다.
 3. M&A 및 투자 평가시 중요한 지표. 회사의 영업이익이 낮더라도 에비따 마진이 높다면 이는 투자할 가치가 있는 경우다.
 
-![](images/EBITDA.jpg)
+
+![](images/EBITDA.jpg){ style="width: 70%; height: auto;" }
 
 ### 사례; 한국 이케아 
 
