TIL 2025 포스트의 매출 관련 용어를 강조하고, 마지막 수정 날짜를 업데이트했습니다.

--- a/posts/today-i/2025-12-31-TIL-2025.qmd
+++ b/posts/today-i/2025-12-31-TIL-2025.qmd
@@ -17,24 +17,24 @@ TIL 2025 버전. 수시로 바뀐다.
 ## 매출(Revenue)에서 순이익(net income)까지 | 2025-06-15
 
 ### 항목 정의 
-- 매출 (revnue): 회사가 제품이나 서비스를 판매하여 얻는 총 수익
-- 매출원가 (cost of goods sold, COGS): 제품이나 서비스를 제공하기 위해 직접적으로 소요된 비용
-- 판관비(selling, general and administrative expenses, SG&A): 판매 및 관리 활동에 소요되는 비용
+- **매출 revnue**: 회사가 제품이나 서비스를 판매하여 얻는 총 수익
+- **매출원가 cost of goods sold, COGS**: 제품이나 서비스를 제공하기 위해 직접적으로 소요된 비용
+- **판관비 selling, general and administrative expenses, SG&A**: 판매 및 관리 활동에 소요되는 비용
   - 영업, 마케팅, 관리, 기획, 재무, 인사 등 사무직 직원의 급여, 상여금, 각종 수당
   - 복리 후생비 
   - 감가 상각비(depreciation), 무형자산 상각비(amortization)
-- 영업외비용 (non-operating expenses): 기업의 주된 영업활동과 관련 없이 발생하는 비용 (예: 이자 비용, 외환차손, 투자자산 처분손실, 재해손실 등)
-- 법인세 비용 (income tax expense): 기업이 벌어들인 이익에 대해 국가에 납부하는 세금
+- **영업외비용 non-operating expenses**: 기업의 주된 영업활동과 관련 없이 발생하는 비용 (예: 이자 비용, 외환차손, 투자자산 처분손실, 재해손실 등)
+- **법인세 비용 income tax expense**: 기업이 벌어들인 이익에 대해 국가에 납부하는 세금
 
 ### 추가 개념 
-- 영업 비용(operating cost): COGS + 판관비 
+- **영업 비용operating cost**: COGS + 판관비 
 
 ### 이윤 정의 
-- 매출총이익(gross profit): 매출에서 매출원가를 뺀 금액
-- EBITDA(Earnings Before Interest, Taxes, Depreciation, and Amortization): 매출총이익에서 영업 비용을 뺸 후 감가상각비와 무형자산 상각비를 더한 금액
-- 영업이익(operating income, EBIT): 매출총이익에서 영업비용을 뺀 금액
-- EBT(Earnings Before Taxes): EBITDA에서 영업외비용을 뺀 금액
-- 순이익(net income, EAT): 영업이익에서 이자비용, 세금 등을 뺀 최종 이익
+- **매출총이익 gross profit**: 매출에서 매출원가를 뺀 금액
+- **EBITDA Earnings Before Interest, Taxes, Depreciation, and Amortization**: 매출총이익에서 영업 비용을 뺸 후 감가상각비와 무형자산 상각비를 더한 금액
+- **영업이익 operating income, EBIT**: 매출총이익에서 영업비용을 뺀 금액
+- **EBT Earnings Before Taxes**: EBITDA에서 영업외비용을 뺀 금액
+- **(당기) 순이익 net income, EAT**: 영업이익에서 이자비용, 세금 등을 뺀 최종 이익
 
 ### EBITA는 왜 중요한가? 
 
