Add new Quarto notebooks for regression paradoxes and setup guides for R and Julia
- Created a new notebook for setting up R and Julia on macOS/Linux, detailing installation methods and VS Code configurations.
- Added a notebook explaining Simpson's Paradox with regression analysis using penguin data.
- Introduced a notebook on Berkson's Paradox, illustrating the impact of collider variables in regression analysis.
- Updated the TIW 2025 post with insights on prediction markets and their implications for information asymmetry.

--- a/posts/today-i/2025-12-31-TIW-2025.qmd
+++ b/posts/today-i/2025-12-31-TIW-2025.qmd
@@ -14,6 +14,26 @@ draft: false
 ## TL; DR
 TIW 2025 버전. 수시로 바뀐다. 
 
+## 예측 시장(predictio market)의 광기 속으로 | 2025-06-16
+
+### Flashpoint
+[Betting on Geopolitical Violence](https://rajivsethi.substack.com/p/betting-on-geopolitical-violence)
+
+### Highlight
+예측 시장을 처음 접한 것은 제임스 서로위키의 "대중의 지혜"를 통해서이다. 이는 크게 두 가지 수준에서 작동한다. 
+
+  1. 제한된 정보를 지닌 개인이 효율적인 시장을 만들어 내듯이, 예측 '시장'에서도 그럴 것이다. 
+  2. 돈이 걸려 있으면, 그 예측에 진심일 것이다. 
+
+서로위키는 이를 대중의 지혜로 설명했다. 개인의 예측은 참값 주변에서 이렇게 저렇게 요동치겠지만, 이를 모아 놓고 보면 얼추 참값에 접근할 것이다. 정확한 메커니즘은 몰라도 꽤 그럴듯한 논리처럼 들린다. 하지만 이 시장의 작동에 숨은 논리는 무엇일까? 
+
+경제학에서 시장을 통한 효율성이 달성되려면 몇 가지 조건이 충족되어야 한다. 그 중에서 여기서 문제가 되는 것은 정보 조건이 아닐까 싶다. 모든 경제 주체가 정보에 관한 동일한 상황에 있어야 이로 인한 판단이 참값에 접근할 것이다. 만일 이 조건이 꺠진다면? 
+
+만일 이 조건이 꺠진다면 어떨까? Sethi 교수에 따르면, 최근 예측 시장은 베팅이 암호 화폐를 통해 이루어진다. 이 조건에서는 누가 얼마를 베팅하는지 알 수 없다. 이 경우 내부 정보를 가진 인물은 큰 베팅으로 돈을 벌 수 있는 여지가 생긴다. 글에 나오듯이 일반적인 전망과 자신이 지닌 정보의 격차를 활용해 돈을 벌 수 있다! 금융 시장에서 흔히 볼 수 있는 정보의 불균형을 활용한 차액 거래가 손쉽게 가능한 것이다. 
+
+그렇다면 이 모든 속임수와 깡패짓에도 불구하고 이 시장은 효율적일까? 금융 시장처럼 효율적 시장 가설이 맞는 것일까? 결과는 조금 더 지켜봐야 알 것이다. 
+
+
 ## 능력주의 신화 | 2025-05-21
 
 ### Flashpoint
