Delete outdated Jupyter notebooks on R and Julia setup, Simpson's Paradox, and Berkson's Paradox. Add new section on Yield Curve Control in TIL 2025 with accompanying image.

--- a/posts/today-i/2025-12-31-TIL-2025.qmd
+++ b/posts/today-i/2025-12-31-TIL-2025.qmd
@@ -14,6 +14,31 @@ draft: false
 ## TL; DR
 TIL 2025 버전. 수시로 바뀐다. 
 
+## Yield Curve Control | 2025-07-14
+
+![](images/graphic-three-yield-curves.png){ style="width: 70%; height: auto;" }
+
+- 일드커브란 정의상 만기와 수익률의 관계를 나타내는 곡선이다.
+  - 만기가 길어질수록 수익률이 높아지는 경우를 정상적인 일드커브라고 한다.
+  - 만기가 길어질수록 수익률이 낮아지는 경우를 역전된 일드커브라고 한다.
+
+### YCC란?
+
+- 중앙은행이 특정 만기의 국채 수익률을 목표로 설정하고, 이를 유지하기 위해 국채를 매입하거나 매도하는 정책이다.
+- YCC는 금리를 조절하는 대신, 특정 만기의 국채 수익률을 직접적으로 조절하는 방식이다.
+- 중앙은행은 경기 침체나 금융 시장 불안 시기에 YCC를 활용하여 장기 금리를 낮추고, 기업의 투자 및 가계의 소비를 촉진하여 경제를 부양하려 시도
+- 1942~1951 년 연준에 의해서 최초로 시도
+  - 전비 마련을 위해 발행한 채권이 금리 상승 
+  - Fed가 특정 금리 이상의 채권을 매입함으로써 정부의 차입 비용을 내려 전비 확보 가능
+- 일본은행이 2016년부터 YCC를 도입; 10년 만기 국채 수익률을 0%로 유지하기 위해 국채를 매입
+
+### QE와의 차이 
+- QE는 중앙은행이 국채를 매입하여 통화 공급을 늘리는 정책 
+  - 금리 하락은 부수적인 효과이며, 유동성 공급에 주안점
+- YCC는 특정 만기의 국채 수익률을 목표로 설정하고, 이를 유지하기 위해 국채를 매입하거나 매도하는 정책
+  - 특정 만기의 장기 금리 안정화 목표
+
+
 ## 매출(Revenue)에서 순이익(net income)까지 | 2025-06-15
 
 ### 항목 정의 
